fix navbar on smaller screen

--- a/src/docs/milestone-01/styles.css
+++ b/src/docs/milestone-01/styles.css
@@ -89,14 +89,15 @@ span {
   background-color: #f7f4f3;
   padding: 0px 8px 0px;
   border: 1px solid gray;
-  height: 0px;
   overflow: hidden;
-  transition: height 0.15s ease-in;
+  max-height: 0;
+  height: auto;
+  transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
 }
 
 .description.show {
-  height: 99px;
-  transition: height 0.15s ease-out;
+  max-height: 1000px;
+  transition: max-height 0.15s cubic-bezier(1, 0, 1,0);
 }
 
 .container {
